--- a/game.html
+++ b/game.html
@@ -22,5 +22,7 @@
 	<script src="js/Main.js"></script>
 	<script src="js/TileGrid.js"></script>
 	<script src="js/LevelEditor.js"></script>
+
+	P = Pause Game
 </body>
 </html>
