--- a/game.html
+++ b/game.html
@@ -14,6 +14,7 @@
 	<script src="js/XP.js"></script>
 	<script src="js/Stats.js"></script>
 	<script src="js/World.js"></script>
+	<script src="js/Levels.js"></script>
 	<script src="js/Camera.js"></script>
 	<script src="js/Input.js"></script>
 	<script src="js/Item.js"></script>
