editor now support enemies being drawn on top of tiles without destroying tile (implementation of saved level still has a bug that cause enemies to drawn in radically different position than the ones from the editor)

--- a/game.html
+++ b/game.html
@@ -18,6 +18,7 @@
 	<script src="js/Camera.js"></script>
 	<script src="js/Input.js"></script>
 	<script src="js/Item.js"></script>
+	<script src="js/EnemySpawnPoints.js"></script>
 	<script src="js/Player.js"></script>
 	<script src="js/Slime.js"></script>
 	<script src="js/Main.js"></script>
