--- a/game.html
+++ b/game.html
@@ -17,6 +17,7 @@
 	<script src="js/World.js"></script>
 	<script src="js/Camera.js"></script>
 	<script src="js/Input.js"></script>
+	<script src="js/GamepadSupport.js"></script>
 	<script src="js/Item.js"></script>
 	<script src="js/EnemySpawnPoints.js"></script>
 	<script src="js/Player.js"></script>
