renaming slime stuff to wormex in preparation for major refactor tomorrow; added const for different enemy types + images var for each enemy + obj literals;

--- a/game.html
+++ b/game.html
@@ -21,7 +21,7 @@
 	<script src="js/Item.js"></script>
 	<script src="js/EnemySpawnPoints.js"></script>
 	<script src="js/Player.js"></script>
-	<script src="js/Slime.js"></script>
+	<script src="js/Wormex.js"></script>
 	<script src="js/Main.js"></script>
 	<script src="js/TileGrid.js"></script>
 	<script src="js/LevelEditor.js"></script>
