--- a/game.html
+++ b/game.html
@@ -20,6 +20,7 @@
 	<script src="js/GamepadSupport.js"></script>
 	<script src="js/Item.js"></script>
 	<script src="js/EnemySpawnPoints.js"></script>
+	<script src="js/Enemy.js"></script>
 	<script src="js/Player.js"></script>
 	<script src="js/Wormex.js"></script>
 	<script src="js/Main.js"></script>
