fixed stats bug that resulted in enemies STR stat being set as NaN (which led to player hp becoming NaN when fighting); looking into a bug regarding HP regen that causes player to ignore wait time before healing; added character's hp to screen for debugging purposes

--- a/game.html
+++ b/game.html
@@ -27,6 +27,6 @@
 	<script src="js/TileGrid.js"></script>
 	<script src="js/LevelEditor.js"></script>
 
-	P = Pause Game
+	<p>P = Pause Game</p>
 </body>
 </html>
