circle based collider class added (not implemented yet will do that later in week); commented out debug circle calls for character hitboxes

--- a/game.html
+++ b/game.html
@@ -19,6 +19,7 @@
 	<script src="js/Input.js"></script>
 	<script src="js/GamepadSupport.js"></script>
 	<script src="js/Item.js"></script>
+	<script src="js/Collider.js"></script>
 	<script src="js/EnemySpawnPoints.js"></script>
 	<script src="js/Enemy.js"></script>
 	<script src="js/Player.js"></script>
