--- a/game.html
+++ b/game.html
@@ -20,10 +20,12 @@
 	<script src="js/GamepadSupport.js"></script>
 	<script src="js/Item.js"></script>
 	<script src="js/Collider.js"></script>
+	<script src="js/Projectile.js"></script>
 	<script src="js/EnemySpawnPoints.js"></script>
 	<script src="js/Enemy.js"></script>
 	<script src="js/Player.js"></script>
 	<script src="js/Wormex.js"></script>
+	<script src="js/Tank.js"></script>
 	<script src="js/Main.js"></script>
 	<script src="js/TileGrid.js"></script>
 	<script src="js/LevelEditor.js"></script>
