Added SoundandMusic Class

--- a/game.html
+++ b/game.html
@@ -29,6 +29,7 @@
 	<script src="js/Main.js"></script>
 	<script src="js/TileGrid.js"></script>
 	<script src="js/LevelEditor.js"></script>
+	<script src="js/SoundandMusic.js"></script>
 
 	<p>P = Pause Game</p>
 </body>
