basic dialogue system in

--- a/game.html
+++ b/game.html
@@ -26,10 +26,10 @@
 	<script src="js/Player.js"></script>
 	<script src="js/Wormex.js"></script>
 	<script src="js/Tank.js"></script>
+    <script src="js/Dialogue.js"></script>
 	<script src="js/Main.js"></script>
 	<script src="js/TileGrid.js"></script>
 	<script src="js/LevelEditor.js"></script>
-	<script src="js/SoundandMusic.js"></script>
 
 	<p>P = Pause Game</p>
 </body>
