--- a/game.html
+++ b/game.html
@@ -23,6 +23,7 @@
 	<script src="js/Projectile.js"></script>
 	<script src="js/EnemySpawnPoints.js"></script>
 	<script src="js/Enemy.js"></script>
+	<script src="js/Character.js"></script>
 	<script src="js/Player.js"></script>
 	<script src="js/Wormex.js"></script>
 	<script src="js/Tank.js"></script>
