Added Future Mute using "M"

--- a/game.html
+++ b/game.html
@@ -9,6 +9,7 @@
 	<canvas height="600" width="800" id="gc"></canvas>
 
 	<!-- Basic JS -->
+	<script src="js/SoundandMusic.js"></script>
 	<script src="js/GraphicsCommon.js"></script>
 	<script src="js/ImageLoading.js"></script>
 	<script src="js/XP.js"></script>
