Massive reorganization of directory to include folders; Seperated helper methods from all files and made them into utilities js files according to their original js file location; made html files more readable and better organized

--- a/game.html
+++ b/game.html
@@ -8,31 +8,58 @@
 <body>
 	<canvas height="600" width="800" id="gc"></canvas>
 
-	<!-- Basic JS -->
-	<script src="js/Utilities.js"></script>
-	<script src="js/SoundandMusic.js"></script>
-	<script src="js/GraphicsCommon.js"></script>
-	<script src="js/ImageLoading.js"></script>
-	<script src="js/XP.js"></script>
-	<script src="js/Stats.js"></script>
-	<script src="js/Levels.js"></script>
-	<script src="js/World.js"></script>
-	<script src="js/Camera.js"></script>
-	<script src="js/Input.js"></script>
-	<script src="js/GamepadSupport.js"></script>
-	<script src="js/Item.js"></script>
+	<!-- Utilities JS -->
+	<script src="js/Utilities/DebugUtilities.js"></script>
+	<script src="js/Utilities/EnemySpawnUtilities.js"></script>
+	<script src="js/Utilities/AllCharactersUtilites.js"></script>
+	<script src="js/Utilities/LevelsUtilities.js"></script>
+	<script src="js/Utilities/WorldUtilities.js"></script>
+	<script src="js/Utilities/EnemyUtilities.js"></script>
+	<script src="js/Utilities/StatsUtilities.js"></script>
+	<script src="js/Utilities/PlayerUtilities.js"></script>
+	<script src="js/Utilities/LevelEditorUtilities.js"></script>
+	<script src="js/Utilities/XpUtilities.js"></script>
+
+	<!-- Graphics/Audio JS -->
+	<script src="js/Graphics_Audio/SoundandMusic.js"></script>
+	<script src="js/Graphics_Audio/GraphicsCommon.js"></script>
+	<script src="js/Graphics_Audio/ImageLoading.js"></script>
+
+	<!-- Stats/XP JS -->
+	<script src="js/Stats_Xp/XP.js"></script>
+	<script src="js/Stats_Xp/Stats.js"></script>
+
+	<!-- World/Collision JS -->
+	<script src="js/World/Levels.js"></script>
+	<script src="js/World/World.js"></script>
+	<script src="js/World/Camera.js"></script>
+
+	<!-- Collider JS -->
 	<script src="js/Collider.js"></script>
-	<script src="js/Projectile.js"></script>
-	<script src="js/EnemySpawnPoints.js"></script>
-	<script src="js/Enemy.js"></script>
-	<script src="js/Character.js"></script>
-	<script src="js/Player.js"></script>
-	<script src="js/Wormex.js"></script>
-	<script src="js/Tank.js"></script>
-    <script src="js/Dialogue.js"></script>
+
+	<!-- Inventory/Items JS -->
+	<script src="js/Inventory_Items/Item.js"></script>
+
+	<!-- Inputs JS -->
+	<script src="js/Input/Input.js"></script>
+	<script src="js/Input/GamepadSupport.js"></script>
+
+	<!-- Characters JS -->
+	<script src="js/Characters/Projectile.js"></script>
+	<script src="js/Characters/EnemySpawnPoints.js"></script>
+	<script src="js/Characters/Enemy.js"></script>
+	<script src="js/Characters/Character.js"></script>
+	<script src="js/Characters/Player.js"></script>
+	<script src="js/Characters/Wormex.js"></script>
+	<script src="js/Characters/Tank.js"></script>
+    <script src="js/Characters/Dialogue.js"></script>
+
+    <!-- Main JS -->
 	<script src="js/Main.js"></script>
-	<script src="js/TileGrid.js"></script>
-	<script src="js/LevelEditor.js"></script>
+
+	<!-- Editor JS -->
+	<script src="js/Editor/TileGrid.js"></script>
+	<script src="js/Editor/LevelEditor.js"></script>
 
 	<p>P = Pause Game</p>
 </body>
