player leaves footprints in the snow

--- a/game.html
+++ b/game.html
@@ -24,6 +24,7 @@
 	<script src="js/Graphics_Audio/SoundandMusic.js"></script>
 	<script src="js/Graphics_Audio/GraphicsCommon.js"></script>
 	<script src="js/Graphics_Audio/ImageLoading.js"></script>
+	<script src="js/Graphics_Audio/groundDecals.js"></script>
 
 	<!-- Stats/XP JS -->
 	<script src="js/Stats_Xp/XP.js"></script>
@@ -52,7 +53,8 @@
 	<script src="js/Characters/Player.js"></script>
 	<script src="js/Characters/Wormex.js"></script>
 	<script src="js/Characters/Tank.js"></script>
-    <script src="js/Characters/Dialogue.js"></script>
+	<script src="js/Characters/Dialogue.js"></script>
+	<script src="js/Characters/Dialogue.js"></script>
 
     <!-- Main JS -->
 	<script src="js/Main.js"></script>
