Fixed bug causing all enemies of same type to lose HP when player only battled one

--- a/game.html
+++ b/game.html
@@ -55,6 +55,11 @@
 	<script src="js/Characters/Tank.js"></script>
 	<script src="js/Characters/Dialogue.js"></script>
 
+	<!-- Particles JS -->
+	<script src="js/Particles/Particle.js"></script>
+	<script src="js/Particles/Emitter.js"></script>
+	<script src="js/Particles/Vector.js"></script>
+
     <!-- Main JS -->
 	<script src="js/Main.js"></script>
 
