fadingTitles class for nice level transitions and welcome messages

--- a/game.html
+++ b/game.html
@@ -25,6 +25,7 @@
 	<script src="js/Graphics_Audio/GraphicsCommon.js"></script>
 	<script src="js/Graphics_Audio/ImageLoading.js"></script>
 	<script src="js/Graphics_Audio/groundDecals.js"></script>
+	<script src="js/Graphics_Audio/FadingTitles.js"></script>
 
 	<!-- Stats/XP JS -->
 	<script src="js/Stats_Xp/XP.js"></script>
