more customizable code for size and life based on which image is being used (wormex currently gets green looking plume; tank just gets quick burst of of blue circles; will change as more particle textures are added)

--- a/game.html
+++ b/game.html
@@ -19,6 +19,7 @@
 	<script src="js/Utilities/PlayerUtilities.js"></script>
 	<script src="js/Utilities/LevelEditorUtilities.js"></script>
 	<script src="js/Utilities/XpUtilities.js"></script>
+	<script src="js/Utilities/ParticlesUtilities.js"></script>
 
 	<!-- Graphics/Audio JS -->
 	<script src="js/Graphics_Audio/SoundandMusic.js"></script>
