starting work on Inventory/Items

--- a/game.html
+++ b/game.html
@@ -42,6 +42,7 @@
 
 	<!-- Inventory/Items JS -->
 	<script src="js/Inventory_Items/Item.js"></script>
+	<script src="js/Inventory_Items/Inventory.js"></script>
 
 	<!-- Inputs JS -->
 	<script src="js/Input/Input.js"></script>
