Sprite Animation Utility operational

--- a/game.html
+++ b/game.html
@@ -20,6 +20,7 @@
 	<script src="js/Utilities/LevelEditorUtilities.js"></script>
 	<script src="js/Utilities/XpUtilities.js"></script>
 	<script src="js/Utilities/ParticlesUtilities.js"></script>
+	<script src="js/Utilities/SpriteUtilities.js"></script>
 
 	<!-- Graphics/Audio JS -->
 	<script src="js/Graphics_Audio/SoundandMusic.js"></script>
