animation manager works

--- a/game.html
+++ b/game.html
@@ -21,6 +21,7 @@
 	<script src="js/Utilities/XpUtilities.js"></script>
 	<script src="js/Utilities/ParticlesUtilities.js"></script>
 	<script src="js/Utilities/SpriteUtilities.js"></script>
+	<script src="js/Utilities/AnimManager.js"></script>
 
 	<!-- Graphics/Audio JS -->
 	<script src="js/Graphics_Audio/SoundandMusic.js"></script>
