--- a/game.html
+++ b/game.html
@@ -67,6 +67,8 @@
 
     <!-- Main JS -->
 	<script src="js/Main.js"></script>
+	<!-- UI JS -->
+	<script src="js/Interface/Menu.js"></script>
 
 	<!-- Editor JS -->
 	<script src="js/Editor/TileGrid.js"></script>
