fallen viking and vanguard enemies implemented (using placeholder slime sheet for them)

--- a/game.html
+++ b/game.html
@@ -58,6 +58,8 @@
 	<script src="js/Characters/Player.js"></script>
 	<script src="js/Characters/Wormex.js"></script>
 	<script src="js/Characters/Tank.js"></script>
+	<script src="js/Characters/FallenViking.js"></script>
+	<script src="js/Characters/Vanguard.js"></script>
 	<script src="js/Characters/Dialogue.js"></script>
 
 	<!-- Particles JS -->
