More boss-related updates.

--- a/game.html
+++ b/game.html
@@ -57,6 +57,7 @@
 	<script src="js/Characters/Character.js"></script>
 	<script src="js/Characters/Player.js"></script>
 	<script src="js/Characters/Wormex.js"></script>
+	<script src="js/Characters/Boss.js"></script>
 	<script src="js/Characters/Tank.js"></script>
 	<script src="js/Characters/FallenViking.js"></script>
 	<script src="js/Characters/Vanguard.js"></script>
