reworked some debug text drawing logic; save and resume from menus call appropriate functions; UI is it's own js file

--- a/game.html
+++ b/game.html
@@ -68,8 +68,13 @@
 	<script src="js/Particles/Particle.js"></script>
 	<script src="js/Particles/Emitter.js"></script>
 
+	<!-- Saving/Loading JS -->
+	<script src="js/Saving_Loading/Saving.js"></script>
+	<script src="js/Saving_Loading/Loading.js"></script>
+
 	<!-- UI JS -->
 	<script src="js/Interface/Menu.js"></script>
+	<script src="js/Interface/UI.js"></script>
 
     <!-- Main JS -->
 	<script src="js/Main.js"></script>
