Added scrolling intro text

--- a/game.html
+++ b/game.html
@@ -4,6 +4,7 @@
 	<title>Flail of the Nordic Tentacles</title>
 	<meta content="text/html;charset=utf-8" http-equiv="Content-Type">
 	<meta content="utf-8" http-equiv="encoding">
+	<link rel="stylesheet" href="css/fonts.css">
 </head>
 <body>
 	<canvas height="600" width="800" id="gc"></canvas>
@@ -22,6 +23,7 @@
 	<script src="js/Utilities/ParticlesUtilities.js"></script>
 	<script src="js/Utilities/SpriteUtilities.js"></script>
 	<script src="js/Utilities/AnimManager.js"></script>
+	<script src="js/Utilities/TextScroll.js"></script>
 
 	<!-- Graphics/Audio JS -->
 	<script src="js/Graphics_Audio/SoundandMusic.js"></script>
