After final boss defeated, show an endgame text scroller gameover screen

--- a/game.html
+++ b/game.html
@@ -24,6 +24,7 @@
 	<script src="js/Utilities/SpriteUtilities.js"></script>
 	<script src="js/Utilities/AnimManager.js"></script>
 	<script src="js/Utilities/TextScroll.js"></script>
+	<script src="js/Utilities/EndGame.js"></script>
 
 	<!-- Graphics/Audio JS -->
 	<script src="js/Graphics_Audio/SoundandMusic.js"></script>
